# Event-Booking

./: Dockerfile.dev  Makefile  docker-compose.dev.yml  pyproject.toml
src/accounts/: admin.py  apis.py  config.py  exceptions.py  managers.py  models.py  services.py  types.py  urls.py  utils.py  validators.py
src/accounts/migrations/: 0001_initial.py  0002_alter_user_is_active_alter_user_password_and_more.py
src/app/: config.py  settings.py  urls.py
src/common/: exceptions.py
src/repositories/: pg_repository.py  repository.py
src/venues/: models.py
src/venues/migrations/: 0001_initial.py
